--- a/Pokedex/Views/Shared/_Layout.cshtml
+++ b/Pokedex/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
         </div>
         <div class="navbar navbar-dark bg-danger shadow-sm">
             <div class="container">
-                <a href="#" class="navbar-brand d-flex align-items-center">
+                <a asp-action="Index" class="navbar-brand d-flex align-items-center">
                     <img src="~/img/favicons/favicon-32x32.png" alt="Pokeball" class="me-2" />
                     &nbsp;<strong>POKÉDEX</strong>
                 </a>
@@ -79,8 +79,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-    <!-- <script src="/lib/jquery/dist/jquery.min.js"></script>
-    <script src="/js/site.js" asp-append-version="true"></script> -->
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script> 
 </body>
 
 </html>
